<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ambilwarna_cancel">Cancel</string>
    <string name="ambilwarna_ok">OK</string>

	<string name="app_name">Brightness Widget</string>
	<string name="percent_20">20%</string>
	<string name="percent_40">40%</string>
	<string name="percent_60">60%</string>
	<string name="percent_80">80%</string>
	<string name="percent_100">100%</string>
	<string name="percent_auto">Auto</string>


	<style name="Theme.Transparent" parent="android:Theme">
		<item name="android:windowIsTranslucent">true</item>
		<item name="android:windowBackground">@android:color/transparent</item>
		<item name="android:windowContentOverlay">@null</item>
		<item name="android:windowNoTitle">true</item>
		<item name="android:windowIsFloating">true</item>
		<item name="android:backgroundDimEnabled">false</item>
	</style>
		<string name="add">Add button</string>
		<string name="remove">Remove button</string>
		<string name="addAutoButton">Add auto button</string>
		<string name="settings_button_category_title">Buttons</string>
</resources>
