<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/rootLinearLayout" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="0dip">
	<Button android:background="@drawable/button_background_left"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_20"
		android:id="@+id/button_1" android:layout_width="72dip"></Button>
	<Button android:background="@drawable/button_background"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_40"
		android:id="@+id/button_2" android:layout_width="72dip"></Button>
	<Button android:background="@drawable/button_background"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_60"
		android:id="@+id/button_3" android:layout_width="72dip"></Button>
	<Button android:background="@drawable/button_background"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_80"
		android:id="@+id/button_4" android:layout_width="72dip"></Button>
	<Button android:background="@drawable/button_background"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_100"
		android:id="@+id/button_5" android:layout_width="72dip"></Button>
	<Button android:background="@drawable/button_background_right"
		android:textColor="@android:color/white" android:layout_weight="1"
		android:layout_height="fill_parent" android:text="@string/percent_auto"
		android:id="@+id/button_auto" android:layout_width="72dip"></Button>
</LinearLayout>
